--- a/Heracles.CLI/Heracles.CLI.csproj
+++ b/Heracles.CLI/Heracles.CLI.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Heracles.Lib\Heracles.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
