--- a/Heracles.Lib/Heracles.Lib.csproj
+++ b/Heracles.Lib/Heracles.Lib.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Yarhl" Version="3.1.0" />
+    <PackageReference Include="Yarhl.Media" Version="3.1.0" />
+  </ItemGroup>
+
 </Project>
