--- a/Heracles.Test/Heracles.Test.csproj
+++ b/Heracles.Test/Heracles.Test.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Heracles.Lib\Heracles.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
