Tutorial format and converter

--- a/Heracles.Test/Heracles.Test.csproj
+++ b/Heracles.Test/Heracles.Test.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Heracles.Lib\Heracles.Lib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Tutorial\" />
+  </ItemGroup>
+
 </Project>
